fix icon alignment

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -604,7 +604,7 @@ footer p {
         margin-left: 0;
 
         .icon {
-          top: -19px;
+          top: -26px;
           height: 64px;
           width: 64px;
 
@@ -657,6 +657,8 @@ footer p {
 
 
 @media (max-width: 496px) {
+
+
 
   .navbar-custom .nav.navbar-nav {
     background-color: rgba(255, 255, 255, .4);
